kube/service_node.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-node-svc
  namespace: default
spec:
  selector:
    app: kube-node
  ports:
  - port: 80
    targetPort: 4000
    protocol: TCP
