kube/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /go(/|$)(.*)
        backend:
          serviceName: kube-go-svc
          servicePort: 80
      - path: /node(/|$)(.*)
        backend:
          serviceName: kube-node-svc
          servicePort: 80
